--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/file/assets/favicon.svg" />
     <meta name="author" content="Krosseye" />
     <meta charset="UTF-8" />
-    <title>{{ config.title }} - Error</title>
+    <title>{{ error_code }} - Error - {{ config.title }}</title>
 
     {% if is_prod %}
     <link rel="stylesheet" href="/file/assets/css/styles.min.css" />
