--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/file/assets/favicon.svg" />
     <meta name="author" content="Krosseye" />
     <meta charset="UTF-8" />
-    <title>{{ config.title }}</title>
+    <title>{{ path.split('/')[-1] }} - Browser - {{ config.title }}</title>
 
     {% if is_prod %}
     <link rel="stylesheet" href="/file/assets/css/styles.min.css" />
@@ -22,10 +22,7 @@
         id="home-button"
         onclick="window.location.href='/';"
       >
-        <span>
-          <span class="header-icon">🌊</span>
-          {{ config.title }}
-        </span>
+        <span> <span class="header-icon">🌊</span>{{ config.title }} </span>
       </span>
       <nav class="buttons">
         <!-- TODO: await implementation of settings route 
@@ -44,11 +41,8 @@
       --></nav>
     </header>
     <div id="motd-banner" class="header">
-      <span class="header-title"
-        ><span><span class="header-icon">📢</span>MOTD</span></span
-      >
       <span class="header-title" id="motd-content">
-        <span id="motd-title"></span>
+        <span class="header-icon">📢</span><span id="motd-title"></span>
         <span id="motd-message"></span>
       </span>
       <div class="buttons">
