add prompt overlays

--- a/app/static/assets/css/default.css
+++ b/app/static/assets/css/default.css
@@ -209,6 +209,10 @@ a:hover {
   fill: var(--text-color);
 }
 
+svg path {
+  fill: var(--text-color);
+}
+
 .header button:hover {
   scale: 0.9;
   background-color: var(--secondary-color);
