--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,5 @@
+{% import 'macros/fluent_icons.html' as icons%}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,20 +27,10 @@
         <span> <span class="header-icon">🌊</span>{{ config.title }} </span>
       </span>
       <nav class="buttons">
-        <!-- TODO: await implementation of settings route 
-          <button title="Settings" onclick="window.location.href='/settings';">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="ionicon"
-            viewBox="0 0 512 512"
-          >
-            <circle cx="256" cy="256" r="48" />
-            <path
-              d="M470.39 300l-.47-.38-31.56-24.75a16.11 16.11 0 01-6.1-13.33v-11.56a16 16 0 016.11-13.22L469.92 212l.47-.38a26.68 26.68 0 005.9-34.06l-42.71-73.9a1.59 1.59 0 01-.13-.22A26.86 26.86 0 00401 92.14l-.35.13-37.1 14.93a15.94 15.94 0 01-14.47-1.29q-4.92-3.1-10-5.86a15.94 15.94 0 01-8.19-11.82l-5.59-39.59-.12-.72A27.22 27.22 0 00298.76 26h-85.52a26.92 26.92 0 00-26.45 22.39l-.09.56-5.57 39.67a16 16 0 01-8.13 11.82 175.21 175.21 0 00-10 5.82 15.92 15.92 0 01-14.43 1.27l-37.13-15-.35-.14a26.87 26.87 0 00-32.48 11.34l-.13.22-42.77 73.95a26.71 26.71 0 005.9 34.1l.47.38 31.56 24.75a16.11 16.11 0 016.1 13.33v11.56a16 16 0 01-6.11 13.22L42.08 300l-.47.38a26.68 26.68 0 00-5.9 34.06l42.71 73.9a1.59 1.59 0 01.13.22 26.86 26.86 0 0032.45 11.3l.35-.13 37.07-14.93a15.94 15.94 0 0114.47 1.29q4.92 3.11 10 5.86a15.94 15.94 0 018.19 11.82l5.56 39.59.12.72A27.22 27.22 0 00213.24 486h85.52a26.92 26.92 0 0026.45-22.39l.09-.56 5.57-39.67a16 16 0 018.18-11.82c3.42-1.84 6.76-3.79 10-5.82a15.92 15.92 0 0114.43-1.27l37.13 14.95.35.14a26.85 26.85 0 0032.48-11.34 2.53 2.53 0 01.13-.22l42.71-73.89a26.7 26.7 0 00-5.89-34.11zm-134.48-40.24a80 80 0 11-83.66-83.67 80.21 80.21 0 0183.66 83.67z"
-            />
-          </svg>
+        <button title="Settings" onclick="window.location.href='/settings';">
+          {{ icons.settings() }}
         </button>
-      --></nav>
+      </nav>
     </header>
     <div id="motd-banner" class="header">
       <span class="header-title" id="motd-content">
@@ -46,22 +38,12 @@
         <span id="motd-message"></span>
       </span>
       <div class="buttons">
-        <button title="Close" id="close-motd">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="ionicon"
-            viewBox="0 0 512 512"
-          >
-            <path
-              d="M289.94 256l95-95A24 24 0 00351 127l-95 95-95-95a24 24 0 00-34 34l95 95-95 95a24 24 0 1034 34l95-95 95 95a24 24 0 0034-34z"
-            />
-          </svg>
-        </button>
+        <button title="Close" id="close-motd">{{ icons.dismiss() }}</button>
       </div>
     </div>
     <main class="container" id="drop-area">
       <h2>
-        / {% set path_parts = path.split('/') %} {% for i in
+        {% set path_parts = path.split('/') %} {% for i in
         range(path_parts|length) %} {% set folder_path =
         '/'.join(path_parts[:i+1]) %} {% if i == path_parts|length - 1 %} {{
         path_parts[i] }} {% else %}
