setup language tools extension

--- a/app/templates/editor.html
+++ b/app/templates/editor.html
@@ -85,6 +85,11 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <script
+      src="/file/assets/js/ace/ext-language_tools.js"
+      type="text/javascript"
+      charset="utf-8"
+    ></script>
     <script src="/file/assets/js/setup-editor.js" defer></script>
   </body>
 </html>
