--- a/app/static/assets/css/editor.css
+++ b/app/static/assets/css/editor.css
@@ -42,3 +42,21 @@
 .ace_editor {
   font-family: "FiraCode", monospace;
 }
+
+.ace_editor.ace_autocomplete {
+  border: var(--border);
+  background: var(--secondary-color);
+  color: var(--text-color);
+  border-radius: var(--border-radius);
+}
+
+.ace_dark.ace_editor.ace_autocomplete {
+  border: var(--border);
+  background: var(--secondary-color);
+  color: var(--text-color);
+  border-radius: var(--border-radius);
+}
+
+.ace_selected {
+  background-color: var(--tertiary-color);
+}
